scss/components/_account.scss
// fix my account links
prm-account-links {
  a {
    margin-left: 1em;
  }
  md-icon {
    height: 15px;
    min-height: 15px;
    width: 15px;
    min-width: 15px;
    margin-left: 0.2em;
  }
}

prm-personal-info {
  // hide group and expire date
  div.header-subtitle {
    display: none;
  }

  // hide language option
  md-card:not(#personalDetails) {
    display: none;
  }

  //hide letter options
  div,
  md-divder {
    &[ng-if='$ctrl.showActionSection()'] {
      display: none !important;
    }
  }
}

courses .tiles-grid-tile .tile-content md-list-item {
  border-bottom: none;
  cursor: default;
  padding-bottom: 0.75em;

  &:hover {
    background-color: unset;
  }
}

// don't show icons in the empty tiles
prm-account-overview {
  .tiles-grid-tile,
  .message-with-icon {
    prm-icon.giant-icon {
      display: none;
    }
  }
}

// accommodate fines note
prm-fines-overview {
  display: inline-block;
  width: -moz-available;
  width: -webkit-fill-available;
  width: fill-available;

  prm-fines-overview-after {
    section {
      display: inline-block;
      margin-left: 0.5em;
      position: relative;
      top: -1em;
    }
  }
}

ill-requests, ill-articles {
  md-list-item .md-button:hover:not([disabled]) {
    background-color: transparent;
    color: inherit;
  }
  md-list md-list-item .md-button:focus:not([disabled]) {
    background-color: #fff;
    & + .md-list-item-inner {
      z-index: 2;
    }
  }
}

